<resources>
    <string name="app_name">IdeiActivitatiKotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="formular">Formular</string>

    <string-array name="Activities">
        <item>commercial</item>
        <item>catering</item>
        <item>education</item>
        <item>entertainment</item>
        <item>tourism</item>
    </string-array>

    <string-array name="Types">
        <item>education</item>
        <item>recreational</item>
        <item>social</item>
        <item>diy</item>
        <item>charity</item>
        <item>cooking</item>
        <item>relaxation</item>
        <item>music</item>
        <item>busywork</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_maps">Caută locație</string>
    <string name="lista_activitati">Lista Activitati</string>
    <string name="activitate_noua">Activitate Noua</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="denumire_activitate">Descriere:</string>
    <string name="tip">Tipul activitatii:</string>
    <string name="data">Data:</string>
    <string name="locatia">Locatia</string>
    <string name="detalii">Detalii activitate</string>
    <string name="locatie_inreg">Se preia locatia</string>
    <string name="grafic">grafic</string>
    <string name="bine_ati_venit">Bine ati venit!</string>
    <string name="idei_activitati">Idei activitati</string>
    <string name="despre">Despre</string>
    <string name="acasa">Acasa</string>
</resources>