<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/acasa" />

        <item
            android:id="@+id/nav_lista_activitati"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_activitati" />

        <item
            android:id="@+id/nav_formular"
            android:icon="@drawable/ic_baseline_form_alt_24"
            android:title="@string/formular" />



        <item
            android:id="@+id/nav_grafic"
            android:icon="@drawable/ic_baseline_show_chart_24"
            android:title="@string/grafic" />



        <item
            android:id="@+id/nav_filtre"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_maps" />

        <item
            android:id="@+id/nav_despre"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/despre" />




    </group>
</menu>