<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ideiactivitati.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_lista_activitati"
        android:name="com.example.ideiactivitati.ListaActivitatiFragment"
        android:label="@string/lista_activitati"
        tools:layout="@layout/fragment_lista_activitati"
        />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ideiactivitati.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.ideiactivitati.MapsFragment"
        android:label="Maps"
        tools:layout="@layout/fragment_maps"/>
    <fragment
        android:id="@+id/nav_activitate_noua"
        android:name="com.example.ideiactivitati.ActivitateNouaFragment"
        android:label="@string/activitate_noua"
        tools:layout="@layout/fragment_activitate_noua"
        />
</navigation>